19991015-23:25 EDT Paul Tucker <ptucker@sympatico.ca>
   * source/compiler/harbour.c
     + || defined(_MSC_VER) around isatty()
      This allows gnu make to compile harbour.exe
      It doesn't seem to affect ms make
   * doc/gmake.txt
     * updated notes regarding MSVC

19991015-23:15 EDT David G. Holm <dholm@jsd-llc.com>

   * include/set.h
   * include/set.ch
   * source/pp/table.c
   * source/rtl/set.c
   * tests/set_num.prg
   * tests/set_test.prg
     + Added missing Clipper 5.3 SETs:
          HB_SET_VIDEOMODE
          HB_SET_MBLOCKSIZE
          HB_SET_MFILEEXT
          HB_SET_STRICTREAD
          HB_SET_OPTIMIZE
          HB_SET_AUTOPEN
          HB_SET_AUTORDER
          HB_SET_AUTOSHARE
       Not knowing what their defaults should be, I defaulted the first
       two to 0, the third one to '\0', and the rest to FALSE.

19991015-22:00 EDT David G. Holm <dholm@jsd-llc.com>

   * source/rtl/inkey.c
     - Removed Windows #ifdefs from DOS-style keyboard input.
     - Removed special handling for Borland C when used with Windows.
     - Removed Cygwin from Unix-like keyboard input support.
     + Windows keyboard input now uses Windows Console Mode functions
       GetNumberOfConsoleInputEvents() and ReadConsoleInput() and a
       whole lot of key code translation. NOTE 1: If INKEY_EXTENDED
       is used, then device-independent key codes are used instead of
       keyboard scan codes and no attempt is made to map extended keys
       to their Clipper equivalents. All key codes have 256 added to
       them. Enhanced adds 512, Shift adds 1024, Left Ctrl adds 2048,
       Right Ctrl adds 4096, Left Alt adds 8192, and Right Alt adds
       16,384. Normal keys are in the range 0 to 255. A value that
       is larger than 255 represents an extended key. All state keys
       generate key codes. Use the test program INKEYTST with two 
       parameters (such as S and X) to display the codes. NOTE 2: This